2006-11-15 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

    * src/atmel.c: Remove the init function since it is no longer
      needed.  This re-works the debug message support so there is
      a simple macro DEBUG() that takes care of all the work.
      Additionally, this fixes an erasing problem where when the
      entire chip was supposed to be erased, it was not.  This
      could cause problems because when the security bits are set,
      they could never be unset.
    * src/atmel.h: Remove the init function since it is no longer
      needed.
    * src/commands.c: This re-works the debug message support so
      there is a simple macro DEBUG() that takes care of all the
      work.
    * src/dfu.c: This re-works the debug message support so there
      is a simple macro DEBUG() that takes care of all the work.
      Additionally, there is no reason to have the init function
      since we are going to use the one external debug variable.
      This normalized all of the functions so they produce useful
      information when debug messages are enabled.  Finally, this
      adds an error number to message converter so that tracking
      down errors is a bit easier.
    * src/dfu.h: Remove the init & debug functions.
    * src/main.c: Adjust the level needed to turn the libusb
      debugging messages on.  Removed the atmel_init() call.
    * src/Makefile.am: Added util.c and util.h to be built.
    * src/util.c: Added the dfu_debug() function in a common
      location.
    * src/util.h: Added the dfu_debug() function in a common
      location.

2006-10-21 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

    * dfu-programmer.spec.in: This resolves several of the problems
      present in the spec file.  The goal is to be able to make this
      package part of the fedora extras.
	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.3.1 release