@@ -92,5 +92,6 @@ int dfu_get_state( struct usb_dev_handle *device,
 int dfu_abort( struct usb_dev_handle *device,
                const unsigned short interface );
 
-char* dfu_state_to_string( int state );
+char* dfu_status_to_string( const int status );
+char* dfu_state_to_string( const int state );
 #endif
